Updated API documentation and removed console.log
